# bevy_editor_pls

./: Cargo.toml
crates/bevy_editor_pls/: Cargo.toml
crates/bevy_editor_pls/examples/: 2d_3d_mixed.rs  basic.rs
crates/bevy_editor_pls/src/: controls.rs  lib.rs
crates/bevy_editor_pls_core/src/: lib.rs
crates/bevy_editor_pls_default_windows/: Cargo.toml
crates/bevy_editor_pls_default_windows/src/: gizmos.rs  scenes.rs
crates/bevy_editor_pls_default_windows/src/cameras/: mod.rs
crates/bevy_editor_pls_default_windows/src/debug_settings/: mod.rs
