[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.8.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jakobhellermann/bevy_editor_pls"
description = "In-App editor tools for bevy apps"
readme = "README.md"

[workspace.dependencies]
bevy_editor_pls = { path = "crates/bevy_editor_pls" }
bevy_editor_pls_core = { path = "crates/bevy_editor_pls_core" }
bevy_editor_pls_default_windows = { path = "crates/bevy_editor_pls_default_windows" }

bevy-inspector-egui = "0.24.0"
egui = "0.27.2"
egui_dock = "0.12"
transform-gizmo-bevy = "0.1.0"

[profile.dev.package."*"]
opt-level = 2